<resources>
    <string name="app_name">Smart Moderation</string>
    <string name="consensuslvl">Select Consensus Level:</string>
    <string name="button_submit">Submit</string>
    <string name="button_info">Info</string>
    <string name="button_card">Show Card</string>
    <string name="title_activity_group_overview">Group Overview</string>
    <string name="title_activity_group_detail">Group: %1$s</string>
    <string name="role_moderator">Moderator</string>
    <string name="role_participant">Participant</string>
    <string name="role_spectator">Spectator</string>
    <string name="online">Online</string>
    <string name="members">Members</string>
    <string name="meetings">Meetings</string>
    <string name="deleteGroupWithNewLine">Delete\nGroup</string>
    <string name="leaveGroupWithNewLine">Leave\nGroup</string>
    <string name="deleteGroup">Delete Group</string>
    <string name="leaveGroup">Leave Group</string>
    <string name="GroupNotFoundException_Message">Group not found</string>
    <string name="MeetingNotFoundException_Message">Meeting not found</string>
    <string name="PollNotFoundException_Message">Poll not found</string>
    <string name="VoiceNotFoundException_Message">Voice not found</string>
    <string name="MemberNotFoundException_Message">Member not found</string>
    <string name="GroupNotFoundException_Action">Create Group</string>
    <string name="MemberNotFoundException_Action">Add Contact</string>
    <string name="NoContactsFoundException_Message">No contacts found</string>
    <string name="NoContactsFoundException_Action">Add Contact</string>
    <string name="title_invitations">Group Invitations</string>
    <string name="create_account">Creating account...</string>
    <string name="account_created">Account was created</string>
    <string name="login">Login...</string>
    <string name="creating_group">Creating Group...</string>
    <string name="group_created">Group was created</string>
    <string name="creating_meeting">Creating Meeting...</string>
    <string name="meeting_created">Meeting was created</string>
    <string name="updating_meeting">Updating Meeting...</string>
    <string name="meeting_updated">Meeting was updated</string>
    <string name="creating_consensusProposal">Creating Consensus Proposal...</string>
    <string name="consensusProposal_created">Consensus Proposal was created</string>
    <string name="sending_voice">Sending voice...</string>
    <string name="voice_sent">Voice was sent</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="already_exists">Already Exists</string>
    <string name="continue_">Continue</string>
    <string name="ok">OK</string>
    <string name="connect_to_phone">Connect to smartphone ...</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="detail">Details</string>
    <string name="open">Open</string>
    <string name="CantCreateGroupException_Message">Group could not be created</string>
    <string name="CantReceiveInvitationsException_Message">Something went wrong with your invitations</string>
    <string name="CantSendConsensusProposal_Message">Consensus Proposal could not be send</string>
    <string name="CantSendVoiceException_Message">Voice could not be send</string>
    <string name="PollCantBeDeletedException_Message">Poll could not be deleted</string>
    <string name="PollCantBeCreatedException_Message">Poll could not be created</string>
    <string name="PollCantBeOpenedException_Message">Poll could not be opened</string>
    <string name="PollCantBeClosedException_Message">Poll could not be closed</string>
    <string name="CantLinkContactToMember_Message">Could not link contact to member</string>
    <string name="GroupSettingsNotFoundException_Message">GroupSettings could not be found</string>
    <string name="CouldNotAddConsensusLevel_Message">Consensus Level could not be added</string>
    <string name="CouldNotChangeConsensusLevel_Message">Consensus Level could not be changed</string>
    <string name="CouldNotDeleteConsensusLevel_Message">Consensus Level could not be deleted</string>
    <string name="ParitcipationCouldNotBeChangedException_Message">Participation could not be changed</string>
    <string name="ParticipationCantBeAddedException_Message">Participation could not be added</string>
    <string name="ParticipationCantBeCreatedException_Message">Participation could not be created</string>
    <string name="ParticipationCantBeDeletedException_Message">Participation could not be deleted</string>
    <string name="SpeechCantBeStartedException_Message">Speech could not be started</string>
    <string name="ParticipationListCouldNotBeCleared_Message">Speech could not be cleared</string>
    <string name="CantDeleteCurrentSpeakerException_Message">Current speaker can not be deleted</string>
    <string name="CantSubMitMeetingException_Message">Meeting could not be submitted</string>
    <string name="MemberCantBeChangedException_Message">Member could not be changed</string>
    <string name="MemberCantBeDeleteException_Message">Member could not be deleted</string>
    <string name="TopicCantBeChangedException_Message">Topic could not be changed</string>
    <string name="TopicCantBeDeletedException_Message">Topic could not be deleted</string>
    <string name="CantCreateModerationCardException_Message">Moderation card couldn\'t be created</string>
    <string name="CantEditModerationCardException_Message">Moderation card couldn\'t be edited</string>
    <string name="CantDeleteModerationCardException_Message">Moderation card couldn\'t be deleted</string>
    <string name="CantfindModerationCardException_Message">Moderation card couldn\'t be found</string>
    <string name="CameraException_Message">Camera had an exception</string>
    <string name="qrcode_old">The QR-Code is from an older version. Ask your contact to update to the latest version.</string>
    <string name="qrcode_new">The QR-Code is from a newer version. Please update to the latest version.</string>
    <string name="qrcode_invalid">The QR-Code is invalid.</string>
    <string name="titleAndConsensusproposalCantBeEmpty">Title and Consensus Proposal can\'t be empty!</string>
    <string name="necessaryToChoseConsensusLevel">It is necessary to select a Consensus Level</string>
    <string name="ConsensusProposalIsNotUnlocked">The Consensus Proposal is not open for evaluation!</string>
    <string name="novoteTaken">Not voted yet</string>
    <string name="SingleModerator">You can\'t leave the group because you are the only Moderator. Please give another person moderator rights before leaving.</string>
    <string name="canNotLeaveGroupThisWay">You can\'t leave the group this way. Please click \'Leave Group\' in Settings to leave.</string>
    <string name="canNotRemoveModeratorRights">Moderator rights can\'t be removed. Please give Moderator rights to another Member before removing Moderator rights.</string>
    <string name="canNotBeMarkedAsSpectator">This Member can\'t be marked as Spectator, because one Consensus Proposal is still open.</string>
    <string name="lastParticipant">This Member can\'t be marked as Spectator, because at least one Participant is necessary</string>
    <string name="noConsensusLevelName">Consensus Level Name is mandatory.</string>
    <string name="speechListCanNotBeEmptiedWhileRunning">List of Speakers can\'t be emptied while another speech is running!</string>
    <string name="statusMustBePresentToAddToSpeechList">Your status has to be present to add yourself to the List of Speakers!</string>
    <string name="cantRemoveYourselfFromTheListWhileRunningSpeech">You can\'t remove yourself from the List of Speakers while another speech is running!</string>
    <string name="wrongPassword">Wrong Password!</string>
    <string name="createMeeting_title">Create Meeting</string>
    <string name="allFieldsMustBeFilled">All fields must be filled out!</string>
    <string name="bothFieldNeedToBeFilled">Either not all fields are filled out or duration doesn\'t contain only numbers!</string>
    <string name="participantAlreadyVoted">The Participant has already voted and therefore he can\'t be deleted!</string>
    <string name="removeYourselfFromMeeting">You can\'t remove yourself from the Meeting!</string>
    <string name="couldNotEstablishConnection">Connection to the contact could not be established!</string>
    <string name="CouldNotSynchronizeDataException_Message">Data could not be synchronized!</string>
    <string name="CreateGroup_title">Create Group</string>
    <string name="ContactExchangeActivity_Title">Add Contact</string>
    <string name="CreateAccount_title">Create Account</string>
    <string name="CreateConsensusProposal_title">Create Consensus Proposal</string>
    <string name="ConsensusProposalDetail_title">Consensus Proposal Details</string>
    <string name="EvaluateConsensusProposal_title">Evaluation</string>
    <string name="consensusProposalOverviewFragment_title">Consensus Proposals</string>
    <string name="consensusproposalResultFragement_title">Results of the Consensus Proposal</string>
    <string name="AddContact_PersonInfo_title">Link Contact</string>
    <string name="PersonInfo_title">Person Information</string>
    <string name="CreateConsensusLevel_title">Create Consensus Level</string>
    <string name="settings_title">Settings</string>
    <string name="home_title">Home</string>
    <string name="cumulativeSpeakingTimesFragment_title">Cumulative Speaking Times</string>
    <string name="speechList_title">List of Speakers</string>
    <string name="login_title">Login</string>
    <string name="meetingDetail_title">Meeting: %1$s</string>
    <string name="consensusproposal_reaffirmation">Are you sure you want to delete the Consensus Proposal?</string>
    <string name="group_reaffirmation">Are you sure you want to delete the Group?</string>
    <string name="group_leave_reaffirmation">Are you sure you want to leave the Group?</string>
    <string name="meeting_reaffirmation">Are you sure you want to delete the Meeting %1$s?</string>
    <string name="member_reaffirmation">Are you sure you want to delete the Member %1$s?</string>
    <string name="consensusproposal_reaffirmation_dynamic">Are you sure you want to delete the Consensus Proposal %1$s?</string>
    <string name="stop_server">Stop Server</string>
    <string name="start_server">Start Server</string>
    <string name="running_server">Server is running at: %1$s:%2$s</string>
    <string name="legend">Legend</string>
    <string name="count">Count</string>
    <string name="participationInPercentage">Share in %</string>
    <string name="name">Last Name</string>
    <string name="explanation">Explanation</string>
    <string name="accumulatedSpeakingTime">Cumulated Speaking Time</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="title">Title</string>
    <string name="groups">Groups</string>
    <string name="guest">Guest</string>
    <string name="surname">First Name</string>
    <string name="linkContact">Link Contact</string>
    <string name="durationInMinutes">Duration in Minutes</string>
    <string name="moderationCardText">Moderation Card Text</string>
    <string name="save">Save</string>
    <string name="addTopic">Add Topic</string>
    <string name="addContact">Add Contact</string>
    <string name="newGroup">New Group</string>
    <string name="groupInvitations">Group Invitations</string>
    <string name="add">Add</string>
    <string name="speakingTime">Speaking Times</string>
    <string name="consensusProposals">Consensus Proposals</string>
    <string name="moderationCard">Moderation Card</string>
    <string name="selectColor">select Color</string>
    <string name="moderator">Moderator</string>
</resources>