<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="dhbw.smartmoderation.home.HomeActivity"
	android:id="@+id/pullToRefresh"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<Button
		android:id="@+id/btnShowGroups"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:layout_marginBottom="12dp"
		android:text="@string/groups"
		app:layout_constraintBottom_toTopOf="@+id/btnAddContact"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_chainStyle="packed"
		android:background="@drawable/rounded"/>

	<Button
		android:id="@+id/btnAddContact"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:layout_marginBottom="12dp"
		android:text="@string/addContact"
		app:layout_constraintBottom_toTopOf="@+id/btnNewGroup"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/btnShowGroups"
		app:layout_constraintVertical_chainStyle="packed"
		android:background="@drawable/rounded"/>

	<Button
		android:id="@+id/btnNewGroup"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:layout_marginBottom="12dp"
		android:text="@string/newGroup"
		app:layout_constraintBottom_toTopOf="@+id/btnGroupInvitations"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/btnAddContact"
		android:background="@drawable/rounded"/>

	<Button
		android:id="@+id/btnGroupInvitations"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:layout_marginBottom="12dp"
		android:text="@string/groupInvitations"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/btnNewGroup"
		android:background="@drawable/rounded"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
