<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/select_contact_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addContact"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recPopUpContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHeight_max="200dp"
        app:layout_constrainedHeight="true"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/select_contact_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        android:background="@drawable/border"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/recPopUpContacts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        android:textAllCaps="false"
        android:text="@string/cancel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirmContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/recPopUpContacts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        android:textAllCaps="false"
        android:text="@string/add" />

</androidx.constraintlayout.widget.ConstraintLayout>